--- a/src/styles/data_set.module.scss
+++ b/src/styles/data_set.module.scss
@@ -11,7 +11,7 @@
   user-select: none;
 
   .title {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
   }
 
@@ -38,5 +38,13 @@
       font-size: 1rem;
       font-weight: bold;
     }
+  }
+
+  .textarea_address {
+    width: 250px;
+    height: 100px;
+    margin: 5px 0 0 25px;
+    padding: 10px;
+    font-size: 1rem;
   }
 }
