--- a/src/styles/data_set.module.scss
+++ b/src/styles/data_set.module.scss
@@ -15,6 +15,10 @@
     font-weight: bold;
   }
 
+  .latlng_err {
+    color: red;
+  }
+
   .input_value {
     width: 250px;
     margin: 5px 0 0 25px;
