--- a/src/styles/data_set.module.scss
+++ b/src/styles/data_set.module.scss
@@ -22,10 +22,6 @@
   .input_value {
     width: 250px;
     margin: 5px 0 0 25px;
-    padding: 0 10px;
-    height: 30px;
-    font-size: 1.1rem;
-    font-weight: bold;
   }
 
   .input_box {
@@ -37,10 +33,6 @@
 
     input {
       width: 100%;
-      height: 30px;
-      padding: 0 0;
-      font-size: 1rem;
-      font-weight: bold;
     }
   }
 
@@ -50,5 +42,56 @@
     margin: 5px 0 0 25px;
     padding: 10px;
     font-size: 1rem;
+    border-width: 0;
+    border-radius: 5px;
+  }
+
+  .radio_container {
+    margin-left: 25px;
+
+    label {
+      padding-left: 10px;
+    }
+  }
+
+  .many_items_container {
+    margin-left: 25px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+
+    label {
+      padding-left: 10px;
+    }
+  }
+
+  .checkbox {
+    margin-left: 25px;
+  }
+
+  .is_exist {
+    margin-left: 10px;
+  }
+
+  .towerstructure_container {
+    margin: 10px 0 0 25px;
+
+    input {
+      width: 50px;
+      text-align: center;
+    }
+
+    span {
+      margin-right: 10px;
+      margin: 0 10px 0 5px;
+    }
+  }
+  input[type="text"],
+  [type="number"] {
+    height: 30px;
+    padding: 0 10px;
+    font-size: 1rem;
+    font-weight: bold;
+    border-width: 0;
+    border-radius: 5px;
   }
 }
