--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,4 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -20,6 +19,7 @@ body {
 }
 
 * {
+  font-family: 'Noto Sans JP', Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
