--- a/src/styles/data_set.module.scss
+++ b/src/styles/data_set.module.scss
@@ -4,18 +4,19 @@
   padding: 15px;
   color: var(--color-on-primary);
   overflow-x: hidden;
+  user-select: none;
 }
 
 .item_box {
   margin-bottom: 20px;
-  user-select: none;
 
   .title {
     font-size: 1rem;
     font-weight: bold;
   }
 
-  .latlng_err {
+  .err_message {
+    margin-left: 10px;
     color: red;
   }
 
@@ -73,7 +74,7 @@
   }
 
   .towerstructure_container {
-    margin: 10px 0 0 25px;
+    margin: 10px 0 10px 25px;
 
     input {
       width: 50px;
@@ -93,5 +94,32 @@
     font-weight: bold;
     border-width: 0;
     border-radius: 5px;
+  }
+}
+
+.submit_container {
+  padding: 20px 0 50px 0;
+  text-align: center;
+
+  .submit {
+    display: inline;
+    padding: 5px 10px;
+    font-weight: 500;
+    color: var(--color-on-primary);
+    background-color: var(--color-secoundary);
+    border-radius: 10px;
+    transition: all 0.2s;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+
+  .err_message {
+    margin-top: 10px;
+    height: 1rem;
+    color: red;
+    font-weight: bold;
   }
 }
