--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,7 @@
 
   --color-primary: #3b577d;
   --color-on-primary: #ffffff;
+  --color-secoundary: #d16f6f;
 }
 
 body {
@@ -29,4 +30,8 @@ input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
