--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,8 @@
   --color-primary: #3b577d;
   --color-on-primary: #ffffff;
   --color-secoundary: #d16f6f;
+  --color-tertiary: #e6e66e;
+  --color-quaternary: #79faf5;
 }
 
 body {
