:building_construction: 細々な修正

--- a/src/styles/data_view.module.scss
+++ b/src/styles/data_view.module.scss
@@ -117,6 +117,7 @@
         white-space: nowrap;
         display: block;
         overflow: hidden;
+        cursor: pointer;
 
         span {
           width: calc(100% - 25px);
