:sparkles: 完了画面途中まで

--- a/src/styles/data_view.module.scss
+++ b/src/styles/data_view.module.scss
@@ -152,7 +152,7 @@
     color: var(--color-on-primary);
   }
 
-  .confirm {
+  .completion {
     padding: 5px 10px;
     margin-right: 10px;
     display: inline-block;
