--- a/src/styles/data_view.module.scss
+++ b/src/styles/data_view.module.scss
@@ -162,3 +162,20 @@
     border-radius: 10px;
   }
 }
+
+.report_container {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+
+  .report {
+    font-size: 30px !important;
+    color: var(--color-on-primary);
+    transition: 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      color: var(--color-tertiary);
+    }
+  }
+}
